3.Semantic.Analysis/test/semanal/error/error4_2_2.mod
module proc;

procedure f(a : integer);
begin
    a := 4 + 5;
    return a
end f;

begin

end proc.
